--- a/README.org
+++ b/README.org
@@ -2,10 +2,12 @@
 :header-args: :mkdirp yes
 :END:
 
-* A literate org configuration
-This file contains the configuration for my system
-** Output function
-This function is called in the flake to build the system
+* A literate NixOS configuration
+This file documents my NixOS configuration. To use, all you need to do is enable flakes and run
+: sudo nixos-rebuild switch --flake "github:maxastyler/literate-nixos?dir=install-flake"
+
+** Flake function
+This function is called in [[./install-flake/flake.nix][the installation flake]] to generate the config for my laptop.
 #+begin_src nix :tangle "build-fun.nix"
   { self, nixpkgs, home-manager, emacs-overlay, ... }@attrs: {
     nixosConfigurations.cheeky-monkey = nixpkgs.lib.nixosSystem {
